<resources>
    <string name="app_name">彩票代购</string>
    <string name="title_indiana">夺宝</string>
    <string name="title_cart">购物车</string>
    <string name="title_mine">我的</string>

    <string name="press_again_exit">再按一次退出</string>

    <string name="tab_index">购彩大厅</string>
    <string name="tab_wincode">开奖号码</string>
    <string name="tab_discover">发现</string>
    <string name="tab_mine">我的彩票</string>
    <string name="congratulate">恭喜</string>
    <string name="cathectic">投注</string>
    <string name="winning">中奖</string>
    <string name="yuan">元</string>
    <string name="cqssc">重庆时时彩</string>
    <string name="newest_lottery">最新开奖</string>
    <string name="immediate_betting">立即投注</string>
    <string name="ssq">双色球</string>
    <string name="last_lottery">上期开奖</string>
    <string name="jzss">竞足赛事</string>
    <string name="more_match">更多比赛</string>
    <string name="win">胜</string>
    <string name="betting">投注</string>
    <string name="xscp">线上彩票</string>
    <string name="ssc">时时彩</string>
    <string name="jczq">竞彩足球</string>
    <string name="bbwp">百变王牌</string>
    <string name="more_infomation_follow_public_number">更多资讯请关注公众号:</string>
    <string name="click_to_copy">（点击可复制）</string>

    <string name="discover_title_1">追号套餐</string>
    <string name="discover_title_2">欧洲五大联赛</string>
    <string name="discover_title_3">比分直播</string>
    <string name="discover_title_4">活动中心</string>
    <string name="discover_title_5">中奖福地</string>
    <string name="discover_title_6">彩票资讯</string>
    <string name="discover_content_1">追号最易中大奖，不中最高返全款</string>
    <string name="discover_content_2">群雄逐鹿，盈利良机</string>
    <string name="discover_content_3">赛事动态实时查看</string>
    <string name="discover_content_4">疯狂加奖中，活动不停歇</string>
    <string name="discover_content_5">95后喜中七星彩一等奖，豪夺400万</string>
    <string name="discover_content_6">赛事资讯早掌握</string>
    <string name="betting_record">投注记录</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="account_detail">账户明细</string>
    <string name="recharge">充值</string>
    <string name="cash">提现</string>
    <string name="lottery_time">开奖时间：</string>
    <string name="jclq">竞彩篮球</string>
    <string name="lessest_6">至少选择6个</string>
    <string name="lessest_5">至少选择5个</string>
    <string name="once">，1个</string>
    <string name="twice">，2个</string>
    <string name="red_ball">红球</string>
    <string name="blue_ball">蓝球</string>
    <string name="machine">机选</string>
    <string name="confirm">确认</string>

    <!--重启-->
    <string name="recovery_dialog_tips">提示</string>
    <string name="recovery_dialog_sure">确定</string>
    <string name="recovery_dialog_cancel">取消</string>
    <string name="recovery_dialog_tips_msg">此操作将清空应用的所有数据并重新启动应用!</string>
    <string name="recovery_exception_type">ExceptionType: %s</string>
    <string name="recovery_class_name">ClassName: %s</string>
    <string name="recovery_method_name">MethodName: %s</string>
    <string name="recovery_line_number">LineNumber: %d</string>
    <string name="recovery_crash_tips_msg">程序发生异常\n建议直接重启应用\n恢复界面仅用于应急处理</string>
    <string name="dqjx">多期机选</string>
    <string name="lrzs">冷热走势</string>
    <string name="xsyl">显示遗漏</string>
    <string name="ycyl">隐藏遗漏</string>
    <string name="kjhm">开奖号码</string>
    <string name="wfgz">玩法规则</string>
    <!--时时彩玩法-->
    <string-array name="ssc_play_way">
        <item>五星直选</item>
        <item>五星通选</item>
        <item>大小单双</item>
        <item>三星直选</item>
        <item>三星组三</item>
        <item>三星组六</item>
        <item>二星直选</item>
        <item>二星组选</item>
        <item>一星直选</item>
    </string-array>
    <!--时时彩玩法-->
    <string-array name="fc3d_play_way">
        <item>直选</item>
        <item>组三</item>
        <item>组六</item>
    </string-array>
    <!--足彩玩法-->
    <string-array name="jczq_play_way">
        <item>混投</item>
        <item>胜平负</item>
        <item>让球胜平负</item>
        <item>比分</item>
        <item>总进球</item>
        <item>半全场</item>
        <item>胜平负/让球</item>
        <item>2选1</item>
        <item>猜一场</item>
    </string-array>

    <!--足彩赛事-->
    <string-array name="jczq_match">
        <item>澳超</item>
        <item>英超</item>
        <item>苏超</item>
        <item>英冠</item>
        <item>英甲</item>
        <item>比甲</item>
        <item>意大利杯</item>
    </string-array>
    <!--篮彩玩法-->
    <string-array name="jclq_play_way">
        <item>混投</item>
        <item>胜负</item>
        <item>让分胜负</item>
        <item>大小分</item>
        <item>胜分差</item>
        <item>胜负/让分</item>
    </string-array>
    <!--篮球赛事-->
    <string-array name="jclq_match">
        <item>欧职联</item>
        <item>美职联</item>
    </string-array>
</resources>
