<?xml version="1.0" encoding="utf-8"?>
<wiki.scene.loadmore.PtrClassicFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D31F14"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_glod_round_corner_20dp"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:visibility="gone"
                    android:text="当前账户还未完善个人信息，请立即完善>"
                    android:textColor="@color/red_text_color"
                    android:textSize="@dimen/text_size_10sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_avatar" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/avatar"
                        android:text="您还未登录"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />

                    <ImageView
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_setting" />

                    <ImageView
                        android:id="@+id/userinfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/setting"
                        android:padding="5dp"
                        android:src="@drawable/ic_user_info" />
                </RelativeLayout>
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D31F14"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="#99130F" />

            <LinearLayout
                android:id="@+id/no_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D31F14"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_red_round_color_3dp"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="立即登录/注册"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/has_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D31F14"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_money"
                            android:drawablePadding="3dp"
                            android:text="可用余额(元)"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1.00"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_18sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#99130F" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_money"
                            android:drawablePadding="3dp"
                            android:text="可提现余额(元)"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1.00"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_18sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C61A16"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_recharge"
                            android:drawablePadding="3dp"
                            android:padding="@dimen/dp_10"
                            android:text="@string/recharge"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#99130F" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_cash"
                            android:drawablePadding="3dp"
                            android:padding="@dimen/dp_10"
                            android:text="@string/cash"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_14" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_betting_record" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@drawable/ic_arrow_right_mine"
                        android:text="@string/betting_record"
                        android:textColor="@color/text_color_title"
                        android:textSize="@dimen/text_size_14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account_detail" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@drawable/ic_arrow_right_mine"
                        android:text="@string/account_detail"
                        android:textColor="@color/text_color_title"
                        android:textSize="@dimen/text_size_14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_coupon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@drawable/ic_arrow_right_mine"
                        android:text="@string/my_coupon"
                        android:textColor="@color/text_color_title"
                        android:textSize="@dimen/text_size_14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</wiki.scene.loadmore.PtrClassicFrameLayout>